# eigsep-field

./: .gitignore  CLAUDE.md  LICENSE  README.md  manifest.toml  pyproject.toml  requirements-hashed.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  contract-change.yml  release-coordination.yml  stack-bug.yml
.github/workflows/: coordinated-pr-check.reusable.yml  image.yml  sync-downstream.yml  validate.yml  wheelhouse.yml
docs/field-kb/: README.md  glossary.md  topology.md
docs/interface/: README.md  bus-roles.md  producer-contracts.md  redis-keys.md  sensor-schemas.md
docs/operator/: laptop-ntp.md  laptop.md  (+3 more)
image/: README.md
scripts/: build-field-kb.py  build-git-wheels.sh  build-wheelhouse.sh  check_firmware_drift.py  check_services_drift.py  check_wheelhouse.py  download-image.sh  fetch_firmware.py  flash-image.sh  gen_interface_docs.py  hardware_requirements.py  hatch_manifest_hook.py  install-cmtvna.sh  install-field.sh  manifest_to_constraints.py  refresh-lock.sh  simulate-field-pi.sh  sync-pr.sh  verify_manifest.py  wheelhouse-constraints.txt
tests/: test_apply_redis_snippet.py  test_apply_role.py  test_build_field_kb.py  test_cli_services_lifecycle.py  test_cli_services_status.py  test_fetch_firmware.py  test_field_kb.py  test_firmware_drift.py  test_interface_docs.py  test_on_demand_services.py  test_patch_workflow.py  test_role_aware_doctor.py  test_role_conf_resolution.py  test_service_cli_flags.py  test_services_drift.py  test_sync_image.py  test_sync_map.py  test_unit_health.py
wheels/: .gitignore  README.md
(+74 files in other folders)
